@@ -62,6 +62,8 @@ DEF_PROC(zrank);
 DEF_PROC(zrrank);
 DEF_PROC(zrange);
 DEF_PROC(zrrange);
+DEF_PROC(redis_zrange);
+DEF_PROC(redis_zrrange);
 DEF_PROC(zsize);
 DEF_PROC(zget);
 DEF_PROC(zset);
@@ -187,6 +189,8 @@ void SSDBServer::reg_procs(NetworkServer *net){
 	REG_PROC(zrrank, "rt");
 	REG_PROC(zrange, "rt");
 	REG_PROC(zrrange, "rt");
+	REG_PROC(redis_zrange, "rt");
+	REG_PROC(redis_zrrange, "rt");
 	REG_PROC(zsize, "rt");
 	REG_PROC(zget, "rt");
 	REG_PROC(zset, "wt");
